@@ -11,7 +11,6 @@ import eu.europeana.indexing.utils.RdfWrapper;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.function.Supplier;
@@ -54,82 +53,74 @@ class IndexerImpl implements Indexer {
     this.stringToRdfConverterSupplier = stringToRdfConverterSupplier;
   }
 
-  private void indexRecords(List<RDF> records, Date recordDate,
-      boolean preserveUpdateAndCreateTimesFromRdf, List<String> datasetIdsForRedirection,
-      boolean performRedirects) throws IndexingException {
-    if (performRedirects && connectionProvider.getRecordRedirectDao() == null) {
+  private void indexRecords(List<RDF> records, IndexingProperties properties)
+          throws IndexingException {
+    if (properties.isPerformRedirects() && connectionProvider.getRecordRedirectDao() == null) {
       throw new SetupRelatedIndexingException(
           "Record redirect dao has not been initialized and performing redirects is requested");
     }
     LOGGER.info("Processing {} records...", records.size());
     final FullBeanPublisher publisher =
-        connectionProvider.getFullBeanPublisher(preserveUpdateAndCreateTimesFromRdf);
+        connectionProvider.getFullBeanPublisher(properties.isPreserveUpdateAndCreateTimesFromRdf());
 
     for (RDF record : records) {
-      preprocessRecord(record);
-      if (performRedirects) {
-        publisher
-            .publishWithRedirects(new RdfWrapper(record), recordDate, datasetIdsForRedirection);
+      preprocessRecord(record, properties.isPerformTierCalculation());
+      if (properties.isPerformRedirects()) {
+        publisher.publishWithRedirects(new RdfWrapper(record), properties.getRecordDate(),
+                properties.getDatasetIdsForRedirection());
       } else {
-        publisher.publish(new RdfWrapper(record), recordDate, datasetIdsForRedirection);
+        publisher.publish(new RdfWrapper(record), properties.getRecordDate(),
+                properties.getDatasetIdsForRedirection());
       }
     }
 
     LOGGER.info("Successfully processed {} records.", records.size());
   }
 
-  private static void preprocessRecord(RDF rdf) throws IndexingException {
+  private static void preprocessRecord(RDF rdf, boolean performTierCalculation)
+          throws IndexingException {
 
     // Perform the tier classification
-    final RdfWrapper rdfWrapper = new RdfWrapper(rdf);
-    RdfTierUtils.setTier(rdf, ClassifierFactory.getMediaClassifier().classify(rdfWrapper));
-    RdfTierUtils.setTier(rdf, ClassifierFactory.getMetadataClassifier().classify(rdfWrapper));
-
+    if (performTierCalculation) {
+      final RdfWrapper rdfWrapper = new RdfWrapper(rdf);
+      RdfTierUtils.setTier(rdf, ClassifierFactory.getMediaClassifier().classify(rdfWrapper));
+      RdfTierUtils.setTier(rdf, ClassifierFactory.getMetadataClassifier().classify(rdfWrapper));
+    }
   }
 
   @Override
-  public void indexRdfs(List<RDF> records, Date recordDate,
-      boolean preserveUpdateAndCreateTimesFromRdf, List<String> datasetIdsForRedirection,
-      boolean performRedirects) throws IndexingException {
-    indexRecords(records, recordDate, preserveUpdateAndCreateTimesFromRdf, datasetIdsForRedirection,
-        performRedirects);
+  public void indexRdfs(List<RDF> records, IndexingProperties indexingProperties)
+          throws IndexingException {
+    indexRecords(records, indexingProperties);
   }
 
   @Override
-  public void indexRdf(RDF record, Date recordDate, boolean preserveUpdateAndCreateTimesFromRdf,
-      List<String> datasetIdsForRedirection, boolean performRedirects) throws IndexingException {
-    indexRdfs(Collections.singletonList(record), recordDate, preserveUpdateAndCreateTimesFromRdf,
-        datasetIdsForRedirection, performRedirects);
+  public void indexRdf(RDF record, IndexingProperties indexingProperties) throws IndexingException {
+    indexRdfs(List.of(record), indexingProperties);
   }
 
   @Override
-  public void index(List<String> records, Date recordDate,
-      boolean preserveUpdateAndCreateTimesFromRdf, List<String> datasetIdsForRedirection,
-      boolean performRedirects) throws IndexingException {
+  public void index(List<String> records, IndexingProperties indexingProperties)
+          throws IndexingException {
     LOGGER.info("Parsing {} records...", records.size());
     final StringToFullBeanConverter stringToRdfConverter = stringToRdfConverterSupplier.get();
     final List<RDF> wrappedRecords = new ArrayList<>(records.size());
     for (String record : records) {
       wrappedRecords.add(stringToRdfConverter.convertStringToRdf(record));
     }
-    indexRecords(wrappedRecords, recordDate, preserveUpdateAndCreateTimesFromRdf,
-        datasetIdsForRedirection, performRedirects);
+    indexRecords(wrappedRecords, indexingProperties);
   }
 
   @Override
-  public void index(String record, Date recordDate, boolean preserveUpdateAndCreateTimesFromRdf,
-      List<String> datasetIdsForRedirection, boolean performRedirects) throws IndexingException {
-    index(Collections.singletonList(record), recordDate, preserveUpdateAndCreateTimesFromRdf,
-        datasetIdsForRedirection, performRedirects);
+  public void index(String record, IndexingProperties indexingProperties) throws IndexingException {
+    index(List.of(record), indexingProperties);
   }
 
   @Override
-  public void index(InputStream record, Date recordDate,
-      boolean preserveUpdateAndCreateTimesFromRdf, List<String> datasetIdsForRedirection,
-      boolean performRedirects) throws IndexingException {
+  public void index(InputStream record, IndexingProperties indexingProperties)
+          throws IndexingException {
     final StringToFullBeanConverter stringToRdfConverter = stringToRdfConverterSupplier.get();
-    indexRdf(stringToRdfConverter.convertToRdf(record), recordDate,
-        preserveUpdateAndCreateTimesFromRdf, datasetIdsForRedirection, performRedirects);
+    indexRdf(stringToRdfConverter.convertToRdf(record), indexingProperties);
   }
 
   @Override
